Wrote out lexer grammar for jzero

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>simple</module>
         <module>simple2</module>
+        <module>jzero-scanner</module>
     </modules>
 
     <properties>
